--- a/cadastrarTreinamento.html
+++ b/cadastrarTreinamento.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="js\cadastrar.js" defer></script>
+    <script src="./js/cadastrarTreinamento.js" defer></script>
     
     <title>Cadastro de Treinamentos</title>
 </head>
@@ -63,11 +63,11 @@
             </div>
 
             <div class="w3-container w3-teal w3-padding-16 input-item">
-                <label for="duração">Duração</label>
-                <input type="text" id="duração">
+                <label for="duracao">Duração</label>
+                <input type="text" id="duracao">
             </div>
         </div>
-            <button id="botoes">
+            <button id="botao-cadastrar">
                 Salvar
             </button>
 
