--- a/colaboradores.html
+++ b/colaboradores.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/cadastrarColaborador.js" defer></script>
+    <script src="./js/carregarColaborador.js" defer></script>
+
     <title>Treinamentos SANOFI</title>
 </head>
 <body>
@@ -31,6 +34,10 @@
             <a href="colaboradores.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  Colaboradores</a>
         </div>
       </nav>
+
+      <section id="listaDeColaboradores">
+
+      </section>
 
 </body>
 </html>
