--- a/cadastrarColaborador.html
+++ b/cadastrarColaborador.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/cadastrarColaborador.js" defer></script>
     <title>Treinamentos SANOFI</title>
 </head>
 <body>
@@ -65,7 +66,7 @@
                 <input type="text" id="treinamentos">
             </div>
         </div>
-            <button class="botoes">
+            <button id="botao-cadastrar1">
                 Salvar
             </button>
 
