validação de form, formatação geral

--- a/cadastrarColaborador.html
+++ b/cadastrarColaborador.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
 
-      <form action="">
+      <form novalidate action="">
         <h2>Novo Colaborador</h2>
         <div class="w3-container w3-orange w3-padding-16">
             <div class="w3-container w3-orange w3-padding-16 input-item">
@@ -44,7 +44,7 @@
             
             <div class="w3-container w3-orange w3-padding-16 input-item">
                 <label for="email">Email</label>
-                <input type="text" id="email">
+                <input type="email" id="email" name="mail">
             </div>
 
             <div class="w3-container w3-orange w3-padding-16 input-item">
@@ -59,7 +59,7 @@
             
             <div class="w3-container w3-orange w3-padding-16 input-item">
                 <label for="matricula">Matrícula</label>
-                <input type="text" id="matricula">
+                <input type="number" id="matricula">
             </div>
 
             <div class="w3-container w3-orange w3-padding-16 input-item">
