--- a/cadastrarTreinamento.html
+++ b/cadastrarTreinamento.html
@@ -49,7 +49,7 @@
 
             <div class="w3-container w3-teal w3-padding-16 input-item">
                 <label for="data">Data</label>
-                <input type="text" id="data">
+                <input type="date" id="data">
             </div>
 
             <div class="w3-container w3-teal w3-padding-16 input-item">
@@ -64,7 +64,7 @@
 
             <div class="w3-container w3-teal w3-padding-16 input-item">
                 <label for="duracao">Duração</label>
-                <input type="text" id="duracao">
+                <input type="time" id="duracao">
             </div>
         </div>
             <button id="botao-cadastrar">
